fix: make all query forms functional and query ids unique

--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Concrete Insight's UK's 'Contact Us' Page">
     <title>Concrete Insight UK</title>
-    <link rel="icon" type="image/x-icon" href="assets//images/s-preller-favicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/images/s-preller-favicon.png">
 
     <!-- Scripts and External Assets -->
     <link href="assets/style.css" rel="stylesheet">
@@ -88,7 +88,7 @@
                         </ul>
                     </li>
                     <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
-                        <a class="nav-link p-3 active" aria-current="page" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link p-3 active" aria-current="page" href="/contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -145,23 +145,23 @@
                 <hr>
                 <form>
                     <div class="form-group">
-                        <label for="queryTopic">Topic of Query</label>
-                        <input required type="text" name="" class="form-control" id="queryTopic">
+                        <label for="query1Topic">Topic of Query</label>
+                        <input required type="text" name="query1Topic" class="form-control" id="query1Topic">
                     </div>
                     <div class="form-group">
-                        <label for="queryEmail">Your Email address</label>
-                        <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                        <label for="query1Email">Your Email address</label>
+                        <input required type="email" name="query1Email" class="form-control" id="query1Email">
                     </div>
                     <div class="form-group">
-                        <label for="queryText">Details of Your Query</label>
-                        <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                        <label for="query1Text">Details of Your Query</label>
+                        <textarea required class="form-control" name="query1Text" id="query1Text" rows="8"></textarea>
                     </div>
                     <div class="row px-2">
                         <input 
-                            id="query-submit"
+                            id="query1-submit"
                             type="submit" 
                             value="Submit Query" 
-                            class="btn btn-success mt-3 CIK-button"/>
+                            class="query-submit btn btn-success mt-3 CIK-button"/>
                     </div>
                 </form>
             </div>
