--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Concrete Insight's UK's Intrusive Investigations Services">
     <title>Concrete Insight UK</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/s-preller-favicon.png">
+    <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
 
     <!-- Scripts and External Assets -->
     <link href="../assets/style.css" rel="stylesheet">
@@ -43,17 +43,17 @@
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link p-3" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
-                    <a class="nav-link dropdown-toggle p-3 active" href="service-pages/intrusive-investigations.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    <a class="nav-link dropdown-toggle p-3 active" href="/service-pages/intrusive-investigations.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html#dust-sampling">Dust Sampling</a></li>
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html#concrete-breakouts">Conrete Breakouts</a></li>
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html#pull-testing">Pull Testing</a></li>
-                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html#half-cell-potential-surveys">Half Cell Potential Surveys</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#dust-sampling">Dust Sampling</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#concrete-breakouts">Conrete Breakouts</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#pull-testing">Pull Testing</a></li>
+                        <li><a class="dropdown-item" href="/service-pages/intrusive-investigations.html#half-cell-potential-surveys">Half Cell Potential Surveys</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
@@ -61,11 +61,11 @@
                             Non-Intrusive Surveys
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="service-pages/non-intrusive-surveys.html">Ferroscanning</a></li>
-                            <li><a class="dropdown-item" href="service-pages/non-intrusive-surveys.html#ground-penetrating-radar">Ground Penetrating Radar</a></li>
-                            <li><a class="dropdown-item" href="service-pages/non-intrusive-surveys.html#defect-surveys">Defect Surveys</a></li>
-                            <li><a class="dropdown-item" href="service-pages/non-intrusive-surveys.html#dimensional-surveys">Dimensional Surveys</a></li>
-                            <li><a class="dropdown-item" href="service-pages/non-intrusive-surveys.html#rebound-hammer-surveys">Rebound Hammer Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html">Ferroscanning</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#ground-penetrating-radar">Ground Penetrating Radar</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#defect-surveys">Defect Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#dimensional-surveys">Dimensional Surveys</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/non-intrusive-surveys.html#rebound-hammer-surveys">Rebound Hammer Surveys</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
@@ -73,28 +73,28 @@
                             Testing
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="service-pages/testing.html">Carbonation Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#chloride-ion-testing">Chloride Ion Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#HAC-determination">HAC Determination</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#compressive-strength-testing">Compressive Strength Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#sulphide-testing">Sulphide Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#total-alkili-testing">Total Alkali Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#petrographic-testing">Petrographic Testing</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#cement-content">Cement Content</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#moisture-content">Moisture Content</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#mixed-mortar-analysis">Mixed Mortar Analysis</a></li>
-                            <li><a class="dropdown-item" href="service-pages/testing.html#tensile-strength">Tensile Strength</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html">Carbonation Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#chloride-ion-testing">Chloride Ion Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#HAC-determination">HAC Determination</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#compressive-strength-testing">Compressive Strength Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#sulphide-testing">Sulphide Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#total-alkili-testing">Total Alkali Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#petrographic-testing">Petrographic Testing</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#cement-content">Cement Content</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#moisture-content">Moisture Content</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#mixed-mortar-analysis">Mixed Mortar Analysis</a></li>
+                            <li><a class="dropdown-item" href="/service-pages/testing.html#tensile-strength">Tensile Strength</a></li>
                         </ul>
                     </li>
                     <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
-                        <a class="nav-link p-3" aria-current="page" href="contact-us.html">Contact Us</a>
+                        <a class="nav-link p-3" aria-current="page" href="/contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Main Page -->
+    <!-- Main Page-->
     <div class="container-fluid">
     <!-- Concrete Coring-->
     <section class="row justify-content-center service-background pt-5">
@@ -135,23 +135,23 @@
                 <h2 id="concrete-coring-query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Coring">
+                    <label for="query1Topic">Topic of Query</label>
+                    <input required type="text" name="query1Topic" class="form-control" id="query1Topic" value="Concrete Coring">
                 </div>
                 <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    <label for="query1Email">Your Email address</label>
+                    <input required type="email" name="query1Email" class="form-control" id="query1Email">
                 </div>
                 <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    <label for="query1Text">Details of Your Query</label>
+                    <textarea required class="form-control" name="query1Text" id="query1Text" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
                     <input 
-                        id="query-submit"
+                        id="query1-submit"
                         type="submit" 
                         value="Submit Query" 
-                        class="btn btn-success mt-3 CIK-button"/>
+                        class="query-submit btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
@@ -195,23 +195,23 @@
                 <h2 id="dust-sampling-query">MAKE A QUERY ABOUT DUST SAMPLING</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Dust Sampling">
+                    <label for="query2Topic">Topic of Query</label>
+                    <input required type="text" name="query2Topic" class="form-control" id="query2Topic" value="Dust Sampling">
                 </div>
                 <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    <label for="query2Email">Your Email address</label>
+                    <input required type="email" name="query2Email" class="form-control" id="query2Email">
                 </div>
                 <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    <label for="query2Text">Details of Your Query</label>
+                    <textarea required class="form-control" name="query2Text" id="query2Text" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
                     <input 
-                        id="query-submit"
+                        id="query2-submit"
                         type="submit" 
                         value="Submit Query" 
-                        class="btn btn-success mt-3 CIK-button"/>
+                        class="query-submit btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
@@ -255,23 +255,23 @@
                 <h2 id="concrete-breakouts-query">MAKE A QUERY ABOUT CONCRETE BREAKOUTS</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Concrete Breakouts">
+                    <label for="query3Topic">Topic of Query</label>
+                    <input required type="text" name="query3Topic" class="form-control" id="query3Topic" value="Concrete Breakouts">
                 </div>
                 <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    <label for="query3Email">Your Email address</label>
+                    <input required type="email" name="query3Email" class="form-control" id="query3Email">
                 </div>
                 <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    <label for="query3Text">Details of Your Query</label>
+                    <textarea required class="form-control" name="query3Text" id="query3Text" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
                     <input 
-                        id="query-submit"
+                        id="query3-submit"
                         type="submit" 
                         value="Submit Query" 
-                        class="btn btn-success mt-3 CIK-button"/>
+                        class="query-submit btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
@@ -315,23 +315,23 @@
                 <h2 id="pull-testing-query">MAKE A QUERY ABOUT PULL TESTING</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Pull Testing">
+                    <label for="query4Topic">Topic of Query</label>
+                    <input required type="text" name="query4Topic" class="form-control" id="query4Topic" value="Pull Testing">
                 </div>
                 <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    <label for="query4Email">Your Email address</label>
+                    <input required type="email" name="query4Email" class="form-control" id="query4Email">
                 </div>
                 <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    <label for="query4Text">Details of Your Query</label>
+                    <textarea required class="form-control" name="query4Text" id="query4Text" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
                     <input 
-                        id="query-submit"
+                        id="query4-submit"
                         type="submit" 
                         value="Submit Query" 
-                        class="btn btn-success mt-3 CIK-button"/>
+                        class="query-submit btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
@@ -375,23 +375,23 @@
                 <h2 id="half-cell-query">MAKE A QUERY ABOUT HALF CELL POTENTIAL SURVEYS</h2>
                 <hr>
                 <div class="form-group">
-                    <label for="queryTopic">Topic of Query</label>
-                    <input required type="text" name="" class="form-control" id="queryTopic" value="Half Cell Potential Surveys">
+                    <label for="query5Topic">Topic of Query</label>
+                    <input required type="text" name="query5Topic" class="form-control" id="query5Topic" value="Half Cell Potential Surveys">
                 </div>
                 <div class="form-group">
-                    <label for="queryEmail">Your Email address</label>
-                    <input required type="email" name="queryEmail" class="form-control" id="queryEmail">
+                    <label for="query5Email">Your Email address</label>
+                    <input required type="email" name="query5Email" class="form-control" id="query5Email">
                 </div>
                 <div class="form-group">
-                    <label for="queryText">Details of Your Query</label>
-                    <textarea required class="form-control" name="queryText" id="queryText" rows="8"></textarea>
+                    <label for="query5Text">Details of Your Query</label>
+                    <textarea required class="form-control" name="query5Text" id="query5Text" rows="8"></textarea>
                 </div>
                 <div class="row px-2">
                     <input 
-                        id="query-submit"
+                        id="query5-submit"
                         type="submit" 
                         value="Submit Query" 
-                        class="btn btn-success mt-3 CIK-button"/>
+                        class="query-submit btn btn-success mt-3 CIK-button"/>
                 </div>
             </form>
         </div>
