fix: ensure all navbar links are correctly relative

--- a/contact-us.html
+++ b/contact-us.html
@@ -88,7 +88,7 @@
                         </ul>
                     </li>
                     <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
-                        <a class="nav-link p-3 active" aria-current="page" href="/contact-us.html">Contact Us</a>
+                        <a class="nav-link p-3 active" aria-current="page" href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
