--- a/contact-us.html
+++ b/contact-us.html
@@ -31,7 +31,7 @@
 <body class="d-flex flex-column min-vh-100">
     <!-- Header -->
     <div class="d-flex justify-content-center py-1" id="nav-header">
-        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="../index.html">CONCRETE • INSIGHT • UK</a>
+        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="index.html">CONCRETE • INSIGHT • UK</a>
         <div class="navbar ms-5 d-lg-none">
             <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
