--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Concrete Insight's UK's 'Contact Us' Page">
     <title>Concrete Insight UK</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/s-preller-favicon.png">
+    <link rel="icon" type="image/x-icon" href="s-preller-favicon.png">
 
     <!-- Scripts and External Assets -->
     <link href="assets/style.css" rel="stylesheet">
